<resources>
    <string name="app_name">Discriminant calculator</string>

    <string name="action_settings">Settings</string>

    <string name="interstitial_ad_sample">Considering the values of a, b and c you have interred, the value of the discriminant is :</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Evaluate the Discriminant</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="equation_text">a*x^2 + b*x + c = 0</string>
    <string name="a">Value of a</string>
    <string name="b">Value of b</string>
    <string name="c">Value of c</string>
    <string name="delta">\Delta</string>
</resources>
