<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/equation_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/equation_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:id="@+id/a_value_text"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/equation_text"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:text="@string/a"
        android:textColor="@color/Noir"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/a_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="numberSigned|numberDecimal"
        />

    <TextView
        android:id="@+id/b_value_text"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/equation_text"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/b"
        android:textColor="@color/Noir"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/b_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="numberSigned|numberDecimal"
        />

    <TextView
        android:id="@+id/c_value_text"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/equation_text"
        android:gravity="center"
        android:text="@string/c"
        android:textColor="@color/Noir"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/c_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:inputType="numberSigned|numberDecimal" />

    <!-- view for AdMob Interstitial Ad -->
    <TextView
        android:id="@+id/app_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/interstitial_ad_sample"
        android:textStyle="bold"
        android:layout_below="@+id/next_level_button"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_title"
        android:layout_centerHorizontal="true"
        android:text="@string/start_level"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/next_level_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="231dp"
        android:text="@string/next_level" />

    <TextView
        android:id="@+id/number_of_solutions"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/level"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
</RelativeLayout>